src/test/ui/issues/issue-17651.stderr
error[E0277]: the size for values of type `[{integer}]` cannot be known at compilation time
  --> $DIR/issue-17651.rs:5:18
   |
LL |     (|| Box::new(*(&[0][..])))();
   |         -------- ^^^^^^^^^^^ doesn't have a size known at compile-time
   |         |
   |         required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[{integer}]`
note: required by a bound in `Box::<T>::new`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
   |
LL | impl<T> Box<T> {
   |      ^ required by this bound in `Box::<T>::new`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
